# feature-grouper

./: .gitignore  CHANGELOG.rst  LICENSE.md  README.rst  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  overview.rst  reference.rst
feature_grouper/: __init__.py  feature_grouper.py
tests/: test_feature_grouper.py
