[tool.poetry]
name = "feature-grouper"
version = "0.1.0"
description = ""
authors = ["Alex Kyllo <alex.kyllo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.5.2"
pandas = "^1.1.1"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.6.0"
Sphinx = "^3.2.1"
Sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
